
cmake_minimum_required(VERSION 2.4)
PROJECT( EULER )

SET( EULER_HDRS
	principal.h
	NaiveInfinitePrecition.h
	euler.h
)

SET( EULER_SRCS
	NaiveInfinitePrecition.cpp
	euler.cpp
)


set( EXE_DIR ${EULER_BINARY_DIR}/exe CACHE PATH
      "Single Directory for all executables")
set( LIB_DIR ${EULER_BINARY_DIR}/libs CACHE PATH
      "Single Directory for all static Libraries")

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXE_DIR} )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR} )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_DIR} )

ADD_LIBRARY( euler ${EULER_HDRS} ${EULER_SRCS} )

OPTION( BUILD_ALL "BUILD_ALL_PROJECTS" OFF )

OPTION( BUILD_eu0001 "eu0001" OFF )
IF( BUILD_eu0001 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0001 )
ENDIF()

OPTION( BUILD_eu0002 "eu0002" OFF )                                                                      
IF( BUILD_eu0002 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0002 )
ENDIF()

OPTION( BUILD_eu0003 "eu0003" OFF )
IF( BUILD_eu0003 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0003 )
ENDIF()

OPTION( BUILD_eu0004 "eu0004" OFF )
IF( BUILD_eu0004 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0004 )
ENDIF()

OPTION( BUILD_eu0005 "eu0005" OFF )
IF( BUILD_eu0005 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0005 )
ENDIF()

OPTION( BUILD_eu0006 "eu0006" OFF )
IF( BUILD_eu0006 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0006 )
ENDIF()

OPTION( BUILD_eu0007 "eu0007" OFF )
IF( BUILD_eu0007 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0007 )
ENDIF()

OPTION( BUILD_eu0008 "eu0008" OFF )
IF( BUILD_eu0008 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0008 )
ENDIF()

OPTION( BUILD_eu0009 "eu0009" OFF )
IF( BUILD_eu0009 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0009 )
ENDIF()

OPTION( BUILD_eu0010 "eu0010" OFF )
IF( BUILD_eu0010 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0010 )
ENDIF()

OPTION( BUILD_eu0011 "eu0011" OFF )
IF( BUILD_eu0011 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0011 )
ENDIF()

OPTION( BUILD_eu0012 "eu0012" OFF )
IF( BUILD_eu0012 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0012 )
ENDIF()

OPTION( BUILD_eu0013 "eu0013" OFF )
IF( BUILD_eu0013 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0013 )
ENDIF()

OPTION( BUILD_eu0014 "eu0014" OFF )
IF( BUILD_eu0014 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0014 )
ENDIF()

OPTION( BUILD_eu0015 "eu0015" OFF )
IF( BUILD_eu0015 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0015 )
ENDIF()

OPTION( BUILD_eu0016 "eu0016" OFF )
IF( BUILD_eu0016 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0016 )
ENDIF()
