
cmake_minimum_required(VERSION 2.4)
PROJECT( EULER )

SET( EULER_HDRS
	principal.h
	NaiveInfinitePrecition.h
	euler.h
	Templates.h
)

SET( EULER_SRCS
	NaiveInfinitePrecition.cpp
	euler.cpp
)


set( EXE_DIR ${EULER_BINARY_DIR}/exe CACHE PATH
      "Single Directory for all executables")
set( LIB_DIR ${EULER_BINARY_DIR}/libs CACHE PATH
      "Single Directory for all static Libraries")

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXE_DIR} )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_DIR} )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_DIR} )

ADD_LIBRARY( euler ${EULER_HDRS} ${EULER_SRCS} )

OPTION( BUILD_ALL "BUILD_ALL_PROJECTS" OFF )

OPTION( BUILD_eu0001 "eu0001" OFF )
IF( BUILD_eu0001 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0001 )
ENDIF()

OPTION( BUILD_eu0002 "eu0002" OFF )                                                                      
IF( BUILD_eu0002 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0002 )
ENDIF()

OPTION( BUILD_eu0003 "eu0003" OFF )
IF( BUILD_eu0003 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0003 )
ENDIF()

OPTION( BUILD_eu0004 "eu0004" OFF )
IF( BUILD_eu0004 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0004 )
ENDIF()

OPTION( BUILD_eu0005 "eu0005" OFF )
IF( BUILD_eu0005 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0005 )
ENDIF()

OPTION( BUILD_eu0006 "eu0006" OFF )
IF( BUILD_eu0006 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0006 )
ENDIF()

OPTION( BUILD_eu0007 "eu0007" OFF )
IF( BUILD_eu0007 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0007 )
ENDIF()

OPTION( BUILD_eu0008 "eu0008" OFF )
IF( BUILD_eu0008 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0008 )
ENDIF()

OPTION( BUILD_eu0009 "eu0009" OFF )
IF( BUILD_eu0009 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0009 )
ENDIF()

OPTION( BUILD_eu0010 "eu0010" OFF )
IF( BUILD_eu0010 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0010 )
ENDIF()

OPTION( BUILD_eu0011 "eu0011" OFF )
IF( BUILD_eu0011 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0011 )
ENDIF()

OPTION( BUILD_eu0012 "eu0012" OFF )
IF( BUILD_eu0012 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0012 )
ENDIF()

OPTION( BUILD_eu0013 "eu0013" OFF )
IF( BUILD_eu0013 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0013 )
ENDIF()

OPTION( BUILD_eu0014 "eu0014" OFF )
IF( BUILD_eu0014 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0014 )
ENDIF()

OPTION( BUILD_eu0015 "eu0015" OFF )
IF( BUILD_eu0015 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0015 )
ENDIF()

OPTION( BUILD_eu0016 "eu0016" OFF )
IF( BUILD_eu0016 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0016 )
ENDIF()

OPTION( BUILD_eu0017 "eu0017" OFF )
IF( BUILD_eu0017 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0017 )
ENDIF()

OPTION( BUILD_eu0018 "eu0018" OFF )
IF( BUILD_eu0018 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0018 )
ENDIF()

OPTION( BUILD_eu0019 "eu0019" OFF )
IF( BUILD_eu0019 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0019 )
ENDIF()

OPTION( BUILD_eu0020 "eu0020" OFF )
IF( BUILD_eu0020 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0020 )
ENDIF()

OPTION( BUILD_eu0021 "eu0021" OFF )
IF( BUILD_eu0021 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0021 )
ENDIF()

OPTION( BUILD_eu0022 "eu0022" OFF )
IF( BUILD_eu0022 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0022 )
ENDIF()

OPTION( BUILD_eu0023 "eu0023" OFF )
IF( BUILD_eu0023 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0023 )
ENDIF()

OPTION( BUILD_eu0024 "eu0024" OFF )
IF( BUILD_eu0024 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0024 )
ENDIF()

OPTION( BUILD_eu0025 "eu0025" OFF )
IF( BUILD_eu0025 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0025 )
ENDIF()

OPTION( BUILD_eu0026 "eu0026" OFF )
IF( BUILD_eu0026 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0026 )
ENDIF()

OPTION( BUILD_eu0027 "eu0027" OFF )
IF( BUILD_eu0027 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0027 )
ENDIF()

OPTION( BUILD_eu0028 "eu0028" OFF )
IF( BUILD_eu0028 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0028 )
ENDIF()

OPTION( BUILD_eu0029 "eu0029" OFF )
IF( BUILD_eu0029 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0029 )
ENDIF()

OPTION( BUILD_eu0030 "eu0030" OFF )
IF( BUILD_eu0030 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0030 )
ENDIF()

OPTION( BUILD_eu0031 "eu0031" OFF )
IF( BUILD_eu0031 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0031 )
ENDIF()

OPTION( BUILD_eu0032 "eu0032" OFF )
IF( BUILD_eu0032 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0032 )
ENDIF()

OPTION( BUILD_eu0033 "eu0033" OFF )
IF( BUILD_eu0033 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0033 )
ENDIF()

OPTION( BUILD_eu0034 "eu0034" OFF )
IF( BUILD_eu0034 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0034 )
ENDIF()

OPTION( BUILD_eu0035 "eu0035" OFF )
IF( BUILD_eu0035 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0035 )
ENDIF()

OPTION( BUILD_eu0036 "eu0036" OFF )
IF( BUILD_eu0036 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0036 )
ENDIF()

OPTION( BUILD_eu0037 "eu0037" OFF )
IF( BUILD_eu0037 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0037 )
ENDIF()

OPTION( BUILD_eu0038 "eu0038" OFF )
IF( BUILD_eu0038 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0038 )
ENDIF()

OPTION( BUILD_eu0039 "eu0039" OFF )
IF( BUILD_eu0039 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0039 )
ENDIF()

OPTION( BUILD_eu0040 "eu0040" OFF )
IF( BUILD_eu0040 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0040 )
ENDIF()

OPTION( BUILD_eu0041 "eu0041" OFF )
IF( BUILD_eu0041 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0041 )
ENDIF()

OPTION( BUILD_eu0042 "eu0042" OFF )
IF( BUILD_eu0042 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0042 )
ENDIF()

OPTION( BUILD_eu0043 "eu0043" OFF )
IF( BUILD_eu0043 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0043 )
ENDIF()

OPTION( BUILD_eu0044 "eu0044" OFF )
IF( BUILD_eu0044 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0044 )
ENDIF()

OPTION( BUILD_eu0045 "eu0045" OFF )
IF( BUILD_eu0045 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0045 )
ENDIF()

OPTION( BUILD_eu0046 "eu0046" OFF )
IF( BUILD_eu0046 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0046 )
ENDIF()

OPTION( BUILD_eu0047 "eu0047" OFF )
IF( BUILD_eu0047 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0047 )
ENDIF()

OPTION( BUILD_eu0048 "eu0048" OFF )
IF( BUILD_eu0048 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0048 )
ENDIF()

OPTION( BUILD_eu0049 "eu0049" OFF )
IF( BUILD_eu0049 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0049 )
ENDIF()

OPTION( BUILD_eu0050 "eu0050" OFF )
IF( BUILD_eu0050 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0050 )
ENDIF()

OPTION( BUILD_eu0051 "eu0051" OFF )
IF( BUILD_eu0051 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0051 )
ENDIF()

OPTION( BUILD_eu0052 "eu0052" OFF )
IF( BUILD_eu0052 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0052 )
ENDIF()

OPTION( BUILD_eu0053 "eu0053" OFF )
IF( BUILD_eu0053 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0053 )
ENDIF()

OPTION( BUILD_eu0054 "eu0054" OFF )
IF( BUILD_eu0054 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0054 )
ENDIF()

OPTION( BUILD_eu0055 "eu0055" OFF )
IF( BUILD_eu0055 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0055 )
ENDIF()

OPTION( BUILD_eu0056 "eu0056" OFF )
IF( BUILD_eu0056 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0056 )
ENDIF()

OPTION( BUILD_eu0057 "eu0057" OFF )
IF( BUILD_eu0057 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0057 )
ENDIF()

OPTION( BUILD_eu0058 "eu0058" OFF )
IF( BUILD_eu0058 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0058 )
ENDIF()

OPTION( BUILD_eu0059 "eu0059" OFF )
IF( BUILD_eu0059 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0059 )
ENDIF()

OPTION( BUILD_eu0060 "eu0060" OFF )
IF( BUILD_eu0060 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0060 )
ENDIF()

OPTION( BUILD_eu0061 "eu0061" OFF )
IF( BUILD_eu0061 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0061 )
ENDIF()

OPTION( BUILD_eu0062 "eu0062" OFF )
IF( BUILD_eu0062 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0062 )
ENDIF()

OPTION( BUILD_eu0063 "eu0063" OFF )
IF( BUILD_eu0063 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0063 )
ENDIF()

OPTION( BUILD_eu0064 "eu0064" OFF )
IF( BUILD_eu0064 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0064 )
ENDIF()

OPTION( BUILD_eu0065 "eu0065" OFF )
IF( BUILD_eu0065 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0065 )
ENDIF()

OPTION( BUILD_eu0066 "eu0066" OFF )
IF( BUILD_eu0066 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0066 )
ENDIF()

OPTION( BUILD_eu0067 "eu0067" OFF )
IF( BUILD_eu0067 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0067 )
ENDIF()

OPTION( BUILD_eu0068 "eu0068" OFF )
IF( BUILD_eu0068 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0068 )
ENDIF()

OPTION( BUILD_eu0069 "eu0069" OFF )
IF( BUILD_eu0069 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0069 )
ENDIF()

OPTION( BUILD_eu0070 "eu0070" OFF )
IF( BUILD_eu0070 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0070 )
ENDIF()

OPTION( BUILD_eu0071 "eu0071" OFF )
IF( BUILD_eu0071 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0071 )
ENDIF()

OPTION( BUILD_eu0072 "eu0072" OFF )
IF( BUILD_eu0072 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0072 )
ENDIF()

OPTION( BUILD_eu0073 "eu0073" OFF )
IF( BUILD_eu0073 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0073 )
ENDIF()

OPTION( BUILD_eu0074 "eu0074" OFF )
IF( BUILD_eu0074 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0074 )
ENDIF()

OPTION( BUILD_eu0075 "eu0075" OFF )
IF( BUILD_eu0075 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0075 )
ENDIF()

OPTION( BUILD_eu0076 "eu0076" OFF )
IF( BUILD_eu0076 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0076 )
ENDIF()

OPTION( BUILD_eu0077 "eu0077" OFF )
IF( BUILD_eu0077 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0077 )
ENDIF()

OPTION( BUILD_eu0078 "eu0078" OFF )
IF( BUILD_eu0078 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0078 )
ENDIF()

OPTION( BUILD_eu0079 "eu0079" OFF )
IF( BUILD_eu0079 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0079 )
ENDIF()

OPTION( BUILD_eu0080 "eu0080" OFF )
IF( BUILD_eu0080 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0080 )
ENDIF()

OPTION( BUILD_eu0081 "eu0081" OFF )
IF( BUILD_eu0081 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0081 )
ENDIF()

OPTION( BUILD_eu0082 "eu0082" OFF )
IF( BUILD_eu0082 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0082 )
ENDIF()

OPTION( BUILD_eu0083 "eu0083" OFF )
IF( BUILD_eu0083 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0083 )
ENDIF()

OPTION( BUILD_eu0084 "eu0084" OFF )
IF( BUILD_eu0084 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0084 )
ENDIF()

OPTION( BUILD_eu0085 "eu0085" OFF )
IF( BUILD_eu0085 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0085 )
ENDIF()

OPTION( BUILD_eu0086 "eu0086" OFF )
IF( BUILD_eu0086 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0086 )
ENDIF()

OPTION( BUILD_eu0087 "eu0087" OFF )
IF( BUILD_eu0087 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0087 )
ENDIF()

OPTION( BUILD_eu0088 "eu0088" OFF )
IF( BUILD_eu0088 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0088 )
ENDIF()

OPTION( BUILD_eu0089 "eu0089" OFF )
IF( BUILD_eu0089 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0089 )
ENDIF()

OPTION( BUILD_eu0090 "eu0090" OFF )
IF( BUILD_eu0090 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0090 )
ENDIF()

OPTION( BUILD_eu0091 "eu0091" OFF )
IF( BUILD_eu0091 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0091 )
ENDIF()

OPTION( BUILD_eu0092 "eu0092" OFF )
IF( BUILD_eu0092 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0092 )
ENDIF()

OPTION( BUILD_eu0093 "eu0093" OFF )
IF( BUILD_eu0093 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0093 )
ENDIF()

OPTION( BUILD_eu0094 "eu0094" OFF )
IF( BUILD_eu0094 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0094 )
ENDIF()

OPTION( BUILD_eu0095 "eu0095" OFF )
IF( BUILD_eu0095 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0095 )
ENDIF()

OPTION( BUILD_eu0096 "eu0096" OFF )
IF( BUILD_eu0096 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0096 )
ENDIF()

OPTION( BUILD_eu0097 "eu0097" OFF )
IF( BUILD_eu0097 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0097 )
ENDIF()

OPTION( BUILD_eu0098 "eu0098" OFF )
IF( BUILD_eu0098 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0098 )
ENDIF()

OPTION( BUILD_eu0099 "eu0099" OFF )
IF( BUILD_eu0099 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0099 )
ENDIF()

OPTION( BUILD_eu0100 "eu0100" OFF )
IF( BUILD_eu0100 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0100 )
ENDIF()

OPTION( BUILD_eu0101 "eu0101" OFF )
IF( BUILD_eu0101 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0101 )
ENDIF()

OPTION( BUILD_eu0102 "eu0102" OFF )
IF( BUILD_eu0102 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0102 )
ENDIF()

OPTION( BUILD_eu0103 "eu0103" OFF )
IF( BUILD_eu0103 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0103 )
ENDIF()

OPTION( BUILD_eu0104 "eu0104" OFF )
IF( BUILD_eu0104 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0104 )
ENDIF()

OPTION( BUILD_eu0105 "eu0105" OFF )
IF( BUILD_eu0105 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0105 )
ENDIF()

OPTION( BUILD_eu0106 "eu0106" OFF )
IF( BUILD_eu0106 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0106 )
ENDIF()

OPTION( BUILD_eu0107 "eu0107" OFF )
IF( BUILD_eu0107 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0107 )
ENDIF()

OPTION( BUILD_eu0108 "eu0108" OFF )
IF( BUILD_eu0108 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0108 )
ENDIF()

OPTION( BUILD_eu0109 "eu0109" OFF )
IF( BUILD_eu0109 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0109 )
ENDIF()

OPTION( BUILD_eu0110 "eu0110" OFF )
IF( BUILD_eu0110 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0110 )
ENDIF()

OPTION( BUILD_eu0111 "eu0111" OFF )
IF( BUILD_eu0111 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0111 )
ENDIF()

OPTION( BUILD_eu0112 "eu0112" OFF )
IF( BUILD_eu0112 OR BUILD_ALL )
  ADD_SUBDIRECTORY( eu0112 )
ENDIF()
